--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
     "@types/node": "16.11.26",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
-    "@types/react-redux": "^7.1.23",
+    "@types/react-redux": "7.1.23",
     "antd": "4.19.3",
     "axios": "0.24.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-h5-audio-player": "3.8.3",
     "react-icons": "4.3.1",
-    "react-redux": "^7.2.8",
+    "react-redux": "7.2.8",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.0",
+    "redux-devtools-extension": "2.13.8",
     "redux-saga": "1.0.5",
-    "typesafe-actions": "^5.1.0",
+    "typesafe-actions": "5.1.0",
     "typescript": "4.6.3",
-    "url-join": "^4.0.1",
-    "web-vitals": "2.1.4",
-    "redux-devtools-extension": "2.13.8"
+    "url-join": "4.0.1",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
